--- a/public/styles/global-styles.css
+++ b/public/styles/global-styles.css
@@ -1,3 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: var(--bg);
+    color: var(--text);
+    max-height: 100%;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+}
+
 /*__VARIABLES__*/
 :root {
     /*_page-colors_*/
@@ -13,27 +27,6 @@
     --brand-b: #ff6384;
     --accent: gold;
 
-    /*_screen-sizes_*/
-    --mobile-min-width: 768px;
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    font-size: 62.5%;
-    /* 62.5% trick: 1rem = 10px for easier scaling */
-}
-
-body {
-    background-color: var(--bg);
-    color: var(--text);
-    max-height: 100%;
-    overflow-x: hidden;
-    scroll-behavior: smooth;
 }
 
 /*__FONTS__*/
@@ -49,16 +42,21 @@ body {
         url(./fonts/Roboto/Roboto-Regular.woff) format(woff);
 }
 
+html {
+    font-size: 62.5%;
+    /* 62.5% trick: 1rem = 10px for easier scaling */
+}
+
 h1 {
     font-family: "Fjalla One";
     font-size: 5rem;
-    color: white;
+    color: var(--text);
 }
 
 h2 {
     font-family: "Fjalla One";
     font-size: 3.5rem;
-    color: white;
+    color: var(--text);
 }
 
 h3,
@@ -72,8 +70,6 @@ a {
     font-size: 2rem;
     color: var(--text);
 }
-
-/*__!! look into nesting or parent :has()  !!__*/
 
 /*__MARGINS__*/
 /* small mobile phones */
