--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,4 +1,12 @@
 /* ===== Page Layout & Sections ===== */
+
+.case-study-page {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 1rem 1rem;
+    gap: 1rem;
+}
+
 .grid--1 { 
     display: grid;
     grid-template-columns: 1fr; 
@@ -27,23 +35,3 @@
     grid-column: 2;
 }
 
-/* Span */
-.col-span-2 {
-    grid-column: span 2;
-}
-
-.col-span-3 {
-    grid-column: span 3;
-}
-
-.col-span-6 {
-    grid-column: span 4;
-}
-
-.col-1-3 {
-    grid-column: 1 / 4;
-}
-
-.col-3-6 {
-    grid-column: 4 / 7;
-}
