--- a/public/styles/traffic-audit.css
+++ b/public/styles/traffic-audit.css
@@ -1,52 +1,8 @@
-/* === Base Styles === */
-/* main {
-    background-color: #1F2A44;
-}
-
-li,
-h2,
-h3,
-p {
-    color: #f5f5f5;
-} */
-
-
-.case-study-page {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    padding: 1rem 1rem;
-    gap: 1rem;
-}
-
-.module__title {
-    text-align: center;
-    font-size: 3.5rem;
-    padding: 1.5rem;
-    text-transform: uppercase;
-}
-
-.module {
-    display: grid;    
-    background-color: #2F3E6A;
-    padding: 1.5rem;
-    border-radius: 0.8rem;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
-}
-
-/*__Heroes__*/
-.hero-case-study {
-    grid-column: span 2;
-    background-color: #2F3E6A;
-    padding: 1.5rem;
-    padding-top: 2rem;
-    align-items: center;
-}
-
 /* === Bespoke & IDs === */
-#key-point-title {
-    padding-bottom: 1.5rem;
-    text-transform: uppercase;
-    align-content: flex-start;
+#goal-statement,
+#data-statement {
+    text-align: left;
+    min-height: 14.5rem;
 }
 
 #goal-statement__title,
@@ -56,58 +12,22 @@ p {
     text-align: center;
 }
 
-#goal-statement,
-#data-statement {
-    text-align: left;
-    min-height: 14.5rem;
-}
-
-/* #traffic-comparison-caption {
-    display: none;
-    max-height: .5rem;
-} */
-
-.figcaption {
-    display: none;
-}
-
-/* #goal-statement {
-    padding-right: 1rem;
-}
-
-#data-statement {
-    padding-left: 1rem;
-} */
-
-/* .card__title h4 {
-    color: #36a2eb;
-    font-weight: 700;
-    font-size: 1.3rem;
+#key-point-title {
+    padding-bottom: 1.5rem;
     text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    margin-bottom: 0.5rem;
-    text-align: center;
+    align-content: flex-start;
 }
 
-.card__title h4 {
-    color: gold;
-    font-weight: 700;
-    font-size: 1.3rem;
+#exec-summary h3 {
+    padding-bottom: .5rem;
     text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    margin-bottom: 0.5rem;
-    text-align: center;
-} */
-
-ol {
-    padding-left: 2.1rem;
+    align-content: flex-start;
+    font-family: "fjalla one";
 }
 
-.card ol {
-    display: grid;
-    grid-template-rows: repeat(3, .25fr);
-    gap: 1rem;
+#exec-summary p {
+    padding-bottom: 1rem;
 }
 
 
-/* MOBILE */
+
