--- a/public/styles/utility.css
+++ b/public/styles/utility.css
@@ -1,5 +1,6 @@
 /* ===== Reusable Components ===== */
-/* Flex alignment */
+
+/* Flex Alignment */
 .u-flex-center {
     display: flex;
     justify-content: center;
@@ -31,15 +32,7 @@
     grid-column: span 6;
 }
 
-.col-1-3 {
-    grid-column: 1 / 4;
-}
-
-.col-3-6 {
-    grid-column: 4 / 7;
-}
-
-/* Text */
+/* Text Alignment */
 .u-text-center {
     text-align: center;
 }
@@ -55,4 +48,17 @@
 
 .token--gold {
     color: var(--accent);
+}
+
+/* hide text, maintain sr & seo */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0); /* Older browsers */
+  clip-path: inset(50%); /* Modern browsers */
+  border: 0;
 }
